--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
     "lint": "eslint --cache --format codeframe --ext js,jsx src",
     "test": "jest --watch",
     "test:coverage": "jest --coverage --colors",
-    "dev": "cross-env NODE_ENV=development  npm-run-all --parallel dev:*",
+    "dev": "cross-env NODE_ENV=development npm-run-all --parallel dev:*",
     "dev:server": "nodemon --watch build --exec \"node build/bundle.js\"",
-    "dev:build-server": "webpack --config webpack.server.js --watch",
-    "dev:build-client": "webpack --config webpack.client.js --watch",
+    "dev:build-server": "webpack --config webpack.server.js ",
+    "dev:build-client": "webpack --config webpack.client.js ",
     "build": "npm-run-all --parallel build:*",
     "build:client": "webpack --config webpack.client.js",
     "build:server": "webpack --config webpack.server.js",
@@ -32,6 +32,7 @@
   },
   "dependencies": {
     "@babel/polyfill": "^7.8.3",
+    "@hot-loader/react-dom": "^16.13.0",
     "@loadable/babel-plugin": "^5.12.0",
     "@loadable/component": "^5.12.0",
     "@loadable/server": "^5.12.0",
@@ -39,15 +40,18 @@
     "axios": "^0.19.2",
     "compression": "^1.7.4",
     "concurrently": "^5.1.0",
+    "connected-react-router": "^6.8.0",
     "cross-env": "^7.0.2",
     "express": "^4.17.1",
     "express-http-proxy": "^1.6.0",
+    "history": "^4.10.1",
     "lodash": "^4.17.15",
     "nodemon": "^2.0.2",
     "npm-run-all": "^4.1.5",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-helmet": "^5.2.1",
+    "react-hot-loader": "^4.12.20",
     "react-redux": "^7.2.0",
     "react-router-config": "^5.1.1",
     "react-router-dom": "^5.0.0",
