--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
     "lint": "eslint --cache --format codeframe --ext js,jsx src",
     "test": "jest --watch",
     "test:coverage": "jest --coverage --colors",
-    "dev": "cross-env NODE_ENV=development npm-run-all --parallel dev:*",
+    "dev": "cross-env NODE_ENV=development SSR=true npm-run-all --parallel dev:*",
     "dev:server": "nodemon --watch build --exec \"node build/bundle.js\"",
     "dev:build-server": "webpack --config webpack.server.js ",
     "dev:build-client": "webpack --config webpack.client.js ",
+    "start":"cross-env NODE_ENV=development SSR=false webpack-dev-server -d --inline --open --host localhost --config webpack.client.js ",
     "build": "npm-run-all --parallel build:*",
     "build:client": "webpack --config webpack.client.js",
     "build:server": "webpack --config webpack.server.js",
