--- a/package.json
+++ b/package.json
@@ -9,13 +9,16 @@
   "private": false,
   "scripts": {
     "lint": "eslint --cache --format codeframe --ext js,jsx src",
+    "start": "cross-env NODE_ENV=development SSR=false webpack-dev-server -d --inline --config webpack.client.js ",
     "test": "jest --watch",
     "test:coverage": "jest --coverage --colors",
     "dev": "cross-env NODE_ENV=development SSR=true npm-run-all --parallel dev:*",
     "dev:server": "nodemon --watch build --exec \"node build/bundle.js\"",
-    "dev:build-server": "webpack --config webpack.server.js ",
-    "dev:build-client": "webpack --config webpack.client.js ",
-    "start":"cross-env NODE_ENV=development SSR=false webpack-dev-server -d --inline --open --host localhost --config webpack.client.js ",
+    "dev:build-server": "webpack --config webpack.server.js",
+    "dev:build-client": "webpack --config webpack.client.js",
+    "prod": "cross-env NODE_ENV=production SSR=true npm-run-all --parallel prod:*",
+    "prod:build-server": "webpack --config webpack.server.js",
+    "prod:build-client": "webpack --config webpack.client.js",
     "build": "npm-run-all --parallel build:*",
     "build:client": "webpack --config webpack.client.js",
     "build:server": "webpack --config webpack.server.js",
@@ -32,7 +35,7 @@
     ]
   },
   "dependencies": {
-    "@babel/polyfill": "^7.8.3",
+    "@babel/polyfill": "^7.8.7",
     "@hot-loader/react-dom": "^16.13.0",
     "@loadable/babel-plugin": "^5.12.0",
     "@loadable/component": "^5.12.0",
@@ -49,8 +52,8 @@
     "lodash": "^4.17.15",
     "nodemon": "^2.0.2",
     "npm-run-all": "^4.1.5",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
+    "react": "^16.13.0",
+    "react-dom": "^16.13.0",
     "react-helmet": "^5.2.1",
     "react-hot-loader": "^4.12.20",
     "react-redux": "^7.2.0",
@@ -63,14 +66,14 @@
     "webpack-node-externals": "^1.7.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.4.3",
+    "@babel/core": "^7.8.7",
     "@babel/plugin-proposal-class-properties": "^7.4.0",
     "@babel/plugin-proposal-function-bind": "^7.2.0",
     "@babel/plugin-syntax-dynamic-import": "^7.2.0",
-    "@babel/preset-env": "^7.4.3",
+    "@babel/preset-env": "^7.8.7",
     "@babel/preset-react": "^7.0.0",
     "autoprefixer": "^9.5.1",
-    "babel-eslint": "^10.0.1",
+    "babel-eslint": "^10.1.0",
     "babel-jest": "^24.7.1",
     "babel-loader": "^8.0.5",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
@@ -87,7 +90,7 @@
     "eslint-plugin-jest": "^22.5.1",
     "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-prettier": "^3.0.1",
-    "eslint-plugin-react": "^7.12.4",
+    "eslint-plugin-react": "^7.19.0",
     "file-loader": "^3.0.1",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
@@ -106,7 +109,7 @@
     "terser-webpack-plugin": "^1.2.3",
     "uglifyjs-webpack-plugin": "^2.1.2",
     "url-loader": "^3.0.0",
-    "webpack": "^4.30.0",
+    "webpack": "^4.42.0",
     "webpack-cli": "^3.3.0",
     "webpack-dev-middleware": "^3.7.2",
     "webpack-dev-server": "^3.3.1",
