--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://ishant-sahu.github.io/chimpoon",
+  "homepage": "https://ishant-sahu.github.io/chimpoon",
   "name": "zoom-ui-collections",
   "version": "1.0.0",
   "description": "Repository for zoom collections",
