changes for chimppon

--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "homepage": "https://ishant-sahu.github.io/chimpoon",
-  "name": "zoom-ui-collections",
+  "name": "Tweenkraft",
   "version": "1.0.0",
   "description": "Repository for zoom collections",
   "main": "index.js",
-  "repository": "https://bitbucket.org/rivigotech/zoom-ui-collections/",
+  "repository": "https://github.com/chimpoon/",
   "author": "Ishant Sahu",
   "license": "MIT",
   "private": false,
@@ -22,11 +22,11 @@
     "prod": "cross-env NODE_ENV=production SSR=true npm-run-all --parallel prod:*",
     "prod:build-server": "webpack --config  webpack.server.js",
     "prod:build-client": " cross-env NODE_ENV=production BASE=public webpack --config webpack.client.js",
-    "prod:github": " cross-env NODE_ENV=production BASE=public webpack --config webpack.client.js",
-    "build": "npm-run-all --parallel build:*",
-    "build:client": "webpack --config webpack.client.js",
+    "prod:github": " cross-env NODE_ENV=production BASE=chimpoon webpack --config webpack.client.js",
+    "build": "cross-env NODE_ENV=production SSR=true  npm-run-all --parallel build:* && npm run run-server",
+    "build:client": "webpack  --config webpack.client.js",
     "build:server": "webpack --config webpack.server.js",
-    "build:run-server": "node build/bundle.js"
+    "run-server": "node build/bundle.js"
   },
   "husky": {
     "hooks": {
@@ -62,6 +62,7 @@
     "npm-run-all": "^4.1.5",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
+    "react-favicon": "0.0.18",
     "react-helmet": "^5.2.1",
     "react-hot-loader": "^4.12.20",
     "react-redux": "^7.2.0",
@@ -86,6 +87,7 @@
     "babel-loader": "^8.0.5",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
     "clean-webpack-plugin": "^2.0.1",
+    "copy-webpack-plugin": "^5.1.1",
     "css-loader": "^3.4.2",
     "dotenv-webpack": "^1.7.0",
     "enzyme": "^3.9.0",
@@ -99,10 +101,11 @@
     "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-prettier": "^3.0.1",
     "eslint-plugin-react": "^7.19.0",
+    "favicons-webpack-plugin": "^3.0.1",
     "file-loader": "^3.0.1",
     "gh-pages": "^2.2.0",
     "html-loader": "^0.5.5",
-    "html-webpack-plugin": "^3.2.0",
+    "html-webpack-plugin": "^4.2.1",
     "husky": "^2.1.0",
     "jest": "^24.7.1",
     "lint-staged": "^8.1.5",
